--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h3>Liga Prancane</H3>
     <hr>
     <br><br>
-    <!-- br tik reižu, cik strīpas pa vidu grib -->
+    <!-- br tik reižu, cik tukšas rindas pa vidu grib -->
     <p class="heading">Description:</p>
     <p> teksts garš un interesants</p><br>
     <p class="heading">Skills:</p>
