--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
     <div id="header"></div>
     <!--uztaisa tukšu konteineri, tabulu. caur css pieliksim formatējumu-->
     <div class="left side"></div>
-    <div class="content"></div>
-    <br><br>
-    <h1>MY CV TEMPLATE</h1>
-    <h3>Liga Prancane</H3>
-    <hr>
-    <br><br>
-    <!-- br tik reižu, cik strīpas pa vidu grib -->
-    <p class="heading">Description:</p>
-    <p> teksts garš un interesants</p><br>
-    <p class="heading">Skills:</p>
-    <ul>
-        <li>test</li>
-        <li>test test</li>
-        <li>test test test</li>
-    </ul><br>
-    <p class="heading">Education:</p>
-    <ol>
-        <li>VVG</li>
-        <li>LU</li>
-    </ol><br>
-    <p class="heading">Experience:</p>
-    <ul>
-        <li>test</li>
-        <li>test test</li>
-        <li>test test test</li>
-    </ul>
+    <div class="content">
+        <br><br>
+        <h1>MY CV TEMPLATE</h1>
+        <h3>Liga Prancane</H3>
+        <hr>
+        <br><br>
+        <!-- br tik reižu, cik atstarpes pa vidu grib -->
+        <p class="heading">Description:</p>
+        <p> teksts garš un interesants</p><br>
+        <p class="heading">Skills:</p>
+        <ul>
+            <li>test</li>
+            <li>test test</li>
+            <li>test test test</li>
+        </ul><br>
+        <p class="heading">Education:</p>
+        <ol>
+            <li>VVG</li>
+            <li>LU</li>
+        </ol><br>
+        <p class="heading">Experience:</p>
+        <ul>
+            <li>test</li>
+            <li>test test</li>
+            <li>test test test</li>
+        </ul>
     </div>
     <div class="right-side"></div>
     <div class="footer">
