--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header"></div>
     <!--uztaisa tukšu konteineri, tabulu. caur css pieliksim formatējumu-->
     <div class="left side"></div>
-    <div class="content"></div>
+    <div class="content">
     <br><br>
     <h1>MY CV TEMPLATE</h1>
     <h3>Liga Prancane</H3>
