--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="header"></div>
     <!--uztaisa tukšu konteineri, tabulu. caur css pieliksim formatējumu-->
-    <div class="left side"></div>
+    <div class="left-side"></div>
     <div class="content">
     <br><br>
     <h1>MY CV TEMPLATE</h1>
